# amdgpu_linux_api

./: .gitignore  CREDITS.md  Cargo.toml  README.md  notes.md
drm/: Cargo.toml
examples/: crate_acquire_vm_integration.rs  dmabuf.rs  drm_check_for_amdgpu_driver.rs  drm_cs_sdma.rs  drm_cs_sdma_parallel.rs  drm_cs_sdma_parallel_poll.rs  drm_gem_mmap.rs  drm_get_clients_can_be_used_to_determine_authentication_status.rs  drm_ioctl_auth_flag_requires_authenticated_primary_client.rs  drm_open_card_file_can_grant_master.rs  drm_open_dri_file_creates_unique_client.rs  drm_query_hw_ip.rs  drm_set_client_name.rs  exported_memory_can_be_mmaped.rs  kfd_acquire_vm_accepts_primary_and_render_clients.rs  kfd_acquire_vm_accepts_vm_with_bos.rs  kfd_alloc_all_vram.rs  kfd_alloc_and_map_doorbell_memory.rs  kfd_alloc_mmap.rs  kfd_alloc_userptr_memory.rs  kfd_events.rs  kfd_events_automatically_allocates_event_pages.rs  kfd_events_can_use_manually_created_gtt_bo.rs  kfd_events_page_cannot_be_freed.rs  kfd_events_sdma_interrupt.rs  kfd_fd_is_send_and_sync_withing_the_same_linux_process.rs  kfd_hdp_flush.rs  kfd_list_devices.rs  kfd_memory.rs  kfd_open_and_check_version.rs  kfd_open_produces_a_process_global_kfd_object.rs  kfd_queue.rs  kfd_smi.rs  kfd_va_conflict_allowed_at_allocation_but_not_during_mapping.rs  sysfs_dump_vram_page.rs
kfd/: Cargo.toml
kfd/src/: ioctl.rs  lib.rs  ring_buffer.rs
kfd/tests/: alloc.rs  queue.rs  simple.rs
src/: drm.rs  ioctl_helpers.rs  kfd.rs  lib.rs  sdma.rs  sdma_new.rs
src/drm/: hidden.rs  ioctl.rs  set_client_name.rs
sysfs/: Cargo.toml
(+15 files in other folders)
